# perroquet

./: .bzrignore  .gitignore  AUTHORS  ChangeLog  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  TODO  configure.ac  core.py  exercice_manager.py  gui.glade  gui.py  gui.xml  perroquet  perroquet.in  perroquet.py  runTests.py  sequence.py  setup.py  subtitles_loader.py  test.py  test2.py  testConfig.py  testConfigReference.ini  testConfigWritable.ini  testRepo.py  testSequence.py  testWord.py  video_player.py
data/: Makefile.am  config  config.ini  exercise_manager.ui  gui_message_dialog.ui  gui_password_dialog.ui  languages.list  languages_aliases.ini  perroquet.desktop.in  perroquet.desktop.in.in  perroquet.ui  perroquet.xml  properties.ui  properties_advanced.ui  reset.ui  settings.ui  sources.conf
data/icons/: Makefile.am
perroquetlib/: Makefile.am  config.py  config2.py  core.py  debug.py  exercice_manager.py  exercise.py  exercise_manager.py  exercise_repository.py  exercise_repository_exercise.py  exercise_repository_group.py  exercise_repository_manager.py  exercise_serializer.py  gui.py  gui_exercise_manager.py  gui_sequence_properties.py  gui_sequence_properties_advanced.py  gui_settings.py  languages_manager.py  perroquet.py  sequence.py  sub_exercise.py  subtitles_loader.py  video_player.py  word.py
perroquetlib/config/: __init__.py  config_lib.py  perroquet_config.py
perroquetlib/config_new/: __init__.py  perroquet_config.py
perroquetlib/gui/: __init__.py  gui.py  gui_controller.py  gui_exercise_controller.py  gui_exercise_manager.py  gui_message_dialog.py  gui_password_dialog.py  gui_reset_exercise.py  gui_sequence_properties.py  gui_sequence_properties_advanced.py  gui_settings.py
perroquetlib/model/: exercise.py  exercise_serializer.py  languages_manager.py  sub_exercise.py  subtitles_loader.py
src/: Makefile.am  perroquet.py
(+41 files in other folders)
